syntax = "proto3";

package go.micro.srv.GetImageCd;

service Example {
	rpc GetImageCd(Request) returns (Response) {}
}

message Request {
	string uuid = 1;
}

message Response {
	string errno = 1;
	string errmsg =2;
	//像素信息
	repeated uint32 Pix =3;
	//像素字节数
	int64 Stride =4;
	//图片的开始
	Point min =5;
	//图片的结束
	Point max =6;
}

message Point {
	int64 x =1;
	int64 y =2;
}
